--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -156,6 +156,7 @@
     "currentClasses": "Current Classes",
     "addClass": "Add Class",
     "removeClass": "Remove Class",
+    "searchClasses": "Search classes...",
     "class": "Class",
     "level": "Level",
     "hitDie": "Hit Die",
