NWN-20: Display full item descriptions and properties in the UI

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -135,6 +135,34 @@
     "rare": "Rare",
     "epic": "Epic",
     "legendary": "Legendary",
+    "description": "Description",
+    "properties": "Properties",
+    "baseItem": "Base Item",
+    "value": "Value",
+    "charges": "Charges",
+    "enhancement": "Enhancement",
+    "identified": "Identified",
+    "unidentified": "Unidentified",
+    "customItem": "Custom/Modded Item",
+    "plotItem": "Plot Item",
+    "cursedItem": "Cursed",
+    "stolenItem": "Stolen",
+    "noDescription": "No description available",
+    "noProperties": "No special properties",
+    "armorClass": "Armor Class",
+    "damage": "Damage",
+    "damageBonus": "Damage Bonus",
+    "attackBonus": "Attack Bonus",
+    "skillBonus": "Skill Bonus",
+    "abilityBonus": "Ability Bonus",
+    "resistance": "Resistance",
+    "immunity": "Immunity",
+    "regeneration": "Regeneration",
+    "spellResistance": "Spell Resistance",
+    "savingThrow": "Saving Throw",
+    "castSpell": "Cast Spell",
+    "perDay": "per day",
+    "unlimited": "Unlimited",
     "slots": {
       "head": "Head",
       "chest": "Chest",
