NWN-18: Add gold editing functionality to inventory

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -23,6 +23,7 @@
     "openSave": "Open Save",
     "save": "Save",
     "saveAs": "Save As",
+    "cancel": "Cancel",
     "recentFiles": "Recent Files",
     "browse": "Browse",
     "autoDetect": "Auto-detect",
@@ -126,6 +127,10 @@
     "miscellaneous": "Miscellaneous",
     "weight": "Weight",
     "gold": "Gold",
+    "goldAmount": "Gold",
+    "editGold": "Edit Gold",
+    "goldUpdated": "Gold updated successfully",
+    "invalidGold": "Invalid gold amount",
     "itemDetails": "Item Details",
     "type": "Type",
     "rarity": "Rarity",
