NWN-22: Implement item deletion with quest/plot item warning dialogs

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -35,6 +35,8 @@
     "equipping": "Equipping...",
     "unequipping": "Unequipping...",
     "destroy": "Destroy",
+    "delete": "Delete",
+    "deleting": "Deleting...",
     "sort": "Sort",
     "dropAll": "Drop All"
   },
@@ -152,6 +154,10 @@
     "plotItem": "Plot Item",
     "cursedItem": "Cursed",
     "stolenItem": "Stolen",
+    "confirmDeleteTitle": "Confirm Delete",
+    "deleteItemName": "Item",
+    "deleteWarningRegular": "Are you sure you want to delete this item? This action cannot be undone.",
+    "deleteWarningPlot": "This is a quest/plot item required for quest progression. Deleting it may break your save file or prevent quest completion. Are you absolutely sure?",
     "noDescription": "No description available",
     "noProperties": "No special properties",
     "armorClass": "Armor Class",
