Refine class selection UI: full-width button synced with Export header, and modal tabs synced with GameState design

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -230,6 +230,7 @@
     "totalLevel": "Total Level",
     "currentClasses": "Current Classes",
     "addClass": "Add Class",
+    "changeClass": "Change Class",
     "removeClass": "Remove Class",
     "searchClasses": "Search classes...",
     "class": "Class",
