Improve item details UI: add base item type, format descriptions, remove duplicate properties

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -144,7 +144,7 @@
     "epic": "Epic",
     "legendary": "Legendary",
     "description": "Description",
-    "properties": "Properties",
+    "properties": "Special Properties",
     "baseItem": "Base Item",
     "value": "Value",
     "charges": "Charges",
