NWN-80: Fix level-up system - feats, spells, skill points tracking
- Fixed feat filtering and classification (Background, Racial, Heritage filters)

- Corrected skill point calculations including Level 1 multiplier and racial bonuses

- Implemented proper level history tracking in LvlStatList

- Added LevelHelperModal for multi-level-up display

- Fixed 2DA parser bug discovered during investigation

- Improved ability score tracking and event handling

- Added useLevelUp hook for frontend level-up flow

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -290,6 +290,13 @@
     "spellsRemoved": "Spells Removed",
     "lvl": "Lvl",
     "noGainsRecorded": "No additional gains recorded for this level.",
+    "experience": "Experience",
+    "experiencePoints": "Experience Points",
+    "currentXP": "Current XP",
+    "xpLevel": "XP Level",
+    "xpToNextLevel": "XP to Next Level",
+    "setXP": "Set XP",
+    "xpLevelMismatchWarning": "Your XP level ({xpLevel}) differs from your class levels ({classLevel}). When you load this save in-game, you will be prompted to level up.",
     "classNames": {
       "barbarian": "Barbarian",
       "bard": "Bard",
@@ -354,11 +361,8 @@
     "totalPoints": "Total Points",
     "pointsSpent": "Points Spent",
     "pointsAvailable": "Points Available",
-    "cheatModeActive": "Cheat Mode Active - You can set any skill value, including negative numbers",
     "searchSkills": "Search skills...",
     "reset": "Reset",
-    "enableCheatMode": "Enable Cheat Mode",
-    "disableCheatMode": "Disable Cheat Mode",
     "skillName": "Skill Name",
     "total": "Total",
     "ranks": "Ranks",
@@ -368,8 +372,6 @@
     "trained": "Trained",
     "armorCheck": "Armor Check",
     "miscModifiers": "Miscellaneous modifiers from feats, items, or other effects",
-    "disableCheatModeTitle": "Disable Cheat Mode?",
-    "disableCheatModeMessage": "Disabling cheat mode will reset all negative skill ranks to 0 and recalculate your available points. Any skill points that exceed the normal limit will be adjusted.",
     "cancel": "Cancel",
     "fromFeatsItemsOrOtherBonuses": "From feats, items, or other bonuses",
     "skillNames": {
@@ -596,7 +598,57 @@
     "collapseAll": "Collapse All",
     "none": "None",
     "all": "All",
-    "restore": "Restore"
+    "restore": "Restore",
+    "cancel": "Cancel",
+    "back": "Back",
+    "next": "Next"
+  },
+  "levelup": {
+    "title": "Level Up",
+    "levelProgress": "Level {current} -> {next}",
+    "summary": "Summary",
+    "whatYouWillGain": "What You Will Gain",
+    "hitPoints": "Hit Points",
+    "skillPoints": "Skill Points",
+    "featSlots": "Feat Slots",
+    "abilityIncrease": "Ability Increase",
+    "spellSlots": "Spell Slots",
+    "currentLevel": "Current Level",
+    "newLevel": "New Level",
+    "selectAbility": "Select Ability to Increase",
+    "abilityIncreaseDescription": "Choose one ability score to increase by +1. This choice is permanent.",
+    "abilityRequired": "You must select an ability to increase at this level.",
+    "selectFeats": "Select Feats",
+    "selectedFeats": "Selected Feats",
+    "searchFeats": "Search feats...",
+    "noFeatsFound": "No feats match your search.",
+    "noFeatsAvailable": "No feats available to select.",
+    "prerequisitesNotMet": "Prerequisites not met",
+    "allocateSkills": "Allocate Skill Points",
+    "remainingPoints": "Remaining Points",
+    "pointsSpent": "Points Spent",
+    "classSkill": "Class Skill",
+    "crossClassSkill": "Cross-Class",
+    "searchSkills": "Search skills...",
+    "selectSpells": "Select Spells",
+    "selectedSpells": "Selected Spells",
+    "searchSpells": "Search spells...",
+    "noSpellsAvailable": "No spells available for this class.",
+    "noSpellsFound": "No spells match your search.",
+    "noSpellsAtLevel": "No spells available at this level.",
+    "confirm": "Confirm",
+    "confirmLevelUp": "Confirm Level Up",
+    "levelChange": "Level Change",
+    "feats": "Feats",
+    "skills": "Skills",
+    "spells": "Spells",
+    "noAbilitySelected": "No ability selected - you will miss this increase!",
+    "noFeatsSelected": "No feats selected",
+    "noSkillsAllocated": "No skill points allocated",
+    "noSpellsSelected": "No spells selected",
+    "unusedSkillPoints": "You have {remaining} unused skill points",
+    "confirmNote": "Click 'Apply Level Up' to apply these changes. This will update your character's stats and cannot be undone.",
+    "applyLevelUp": "Apply Level Up"
   },
   "errors": {
     "loadingFailed": "Failed to load data"
